<!-- <?xml version="1.0"?>

<package format="2">
  <name>unitree_legged_sdk</name>
  <version>0.0.0</version>
  <description>The unitree_legged_sdk package.</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package> -->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_legged_sdk</name>
  <version>3.8.6</version>
  <description>The unitree_legged_sdk package for ROS 2.</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>